--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.mongodb:mongodb-driver-sync:4.7.1'
-    implementation 'org.slf4j:slf4j-api:1.7.6'
-    implementation 'org.slf4j:jul-to-slf4j:1.7.25'
+    //implementation 'org.slf4j:slf4j-api:1.7.6'
+    //implementation 'org.slf4j:jul-to-slf4j:1.7.25'
     implementation 'ch.qos.logback:logback-classic:1.2.6'
     implementation 'commons-cli:commons-cli:1.3'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
