Some minor cleaning
- adding instructions to build to README.md
- setting minimum version for source to 1.17 for warnings/compilation

--- a/app/config.json
+++ b/app/config.json
@@ -34,7 +34,7 @@
                 "collectionName": "data",
                 "dbname": "orderbenchembedded",
                 "loadData": true,
-                "embedded_collection_name": "embedded", 
+                "embedded_collection_name": "order", 
                 "db_name": "orderbenchembedded",
                 "shipment_type": "shipment",
                 "shipment_item_type": "shipmentitem",
