--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ plugins {
     id 'application'
 }
 
+sourceCompatibility = '1.17'
+
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
