--- a/app/configEI.json
+++ b/app/configEI.json
@@ -16,7 +16,7 @@
                 "collectionName": "data",
                 "dbname": "orderbenchembedded",
                 "loadData": true,
-                "embedded_collection_name": "embedded", 
+                "embedded_collection_name": "order", 
                 "db_name": "orderbenchembedded",
                 "shipment_type": "shipment",
                 "shipment_item_type": "shipmentitem",
