Updates, refactoring and cleanup for publishing

--- a/config.json
+++ b/config.json
@@ -3,17 +3,33 @@
     {
       "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_lookup",
       "className": "APIMonitorLookupTest",
-      "metrics": ["USEPIPELINE", "USEMULTIQUERY", "USESINGLECOLLECTION"],
+      "measures": ["USEPIPELINE"],
       "threads": 3,
       "iterations": 100,
       "resultsuri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
       "resultsCollectionName": "apimonitor_results",
       "resultsDBName": "performancebenchresults",
       "custom": {
-        "uri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority&readPreference=secondary",
+        "uri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
         "apiCollectionName": "APIDetails",
-        "metricsCollectionName": "splunkModel",
-        "singleCollectionName": "APISingleCollection",
+        "metricsCollectionName": "APISingleCollection",
+        "dbname": "HSBC",
+        "regions": ["UK", "NY", "TK", "HK", "IN"],
+        "baseDate": "2022-11-01T00:00:00.000Z"
+      }
+    },
+    {
+      "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_lookup",
+      "className": "APIMonitorMultiQueryTest",
+      "measures": ["USEINQUERY", "USEEQUALITYQUERY"],
+      "threads": 3,
+      "iterations": 100,
+      "resultsuri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+      "resultsCollectionName": "apimonitor_results",
+      "resultsDBName": "performancebenchresults",
+      "custom": {
+        "uri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+        "metricsCollectionName": "APISingleCollection",
         "dbname": "HSBC",
         "regions": ["UK", "NY", "TK", "HK", "IN"],
         "baseDate": "2022-11-01T00:00:00.000Z"
