--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
 
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.mongodb:mongodb-driver-sync:4.8.0'
+    implementation 'org.mongodb:mongodb-driver-reactivestreams:4.8.0'
     implementation 'ch.qos.logback:logback-classic:1.2.6'
     implementation 'commons-cli:commons-cli:1.3'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
