--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
   "models": [
     {
-      "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_precompute",
-      "className": "APIMonitorPrecomputeTest",
-      "measures": ["PRECOMPUTE"],
-      "threads": 1,
-      "iterations": 1,
-      "resultsuri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+      "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_lookup",
+      "className": "APIMonitorLookupTest",
+      "measures": ["USEPIPELINE"],
+      "threads": 2,
+      "iterations": 500,
+      "resultsuri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
       "resultsCollectionName": "apimonitor_results",
-      "resultsDBName": "performancebenchresultstemp",
+      "resultsDBName": "performancebenchresults",
       "custom": {
-        "uri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+        "uri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
         "apiCollectionName": "APIDetails",
         "metricsCollectionName": "APIMetrics",
         "precomputeCollectionName": "APIPreCalc",
@@ -19,68 +19,71 @@
         "baseDate": "2022-11-01T00:00:00.000Z",
         "clusterTier": "M40",
         "rebuildData": false,
-        "apiCount": 100
-      }
-    },
-    {
-      "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_regionquery",
-      "className": "APIMonitorRegionQueryTest",
-      "measures": ["QUERYSYNC","QUERYASYNC"],
-      "threads": 1,
-      "iterations": 1,
-      "resultsuri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
-      "resultsCollectionName": "apimonitor_results",
-      "resultsDBName": "performancebenchresultstemp",
-      "custom": {
-        "uri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
-        "apiCollectionName": "APIDetails",
-        "metricsCollectionName": "APIMetrics",
-        "dbname": "APIMonitor",
-        "regions": ["UK", "TK", "HK", "IN" ],
-        "baseDate": "2022-11-01T00:00:00.000Z",
-        "clusterTier": "M10",
-        "rebuildData": false,
-        "apiCount": 100
+        "apiCount": 1000
       }
     },
     {
       "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_multiquery",
       "className": "APIMonitorMultiQueryTest",
       "measures": ["USEINQUERY"],
-      "threads": 1,
-      "iterations": 1,
-      "resultsuri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+      "threads": 2,
+      "iterations": 500,
+      "resultsuri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
       "resultsCollectionName": "apimonitor_results",
-      "resultsDBName": "performancebenchresultstemp",
+      "resultsDBName": "performancebenchresults",
       "custom": {
-        "uri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+        "uri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
         "apiCollectionName": "APIDetails",
         "metricsCollectionName": "APIMetrics",
+        "precomputeCollectionName": "APIPreCalc",
         "dbname": "APIMonitor",
         "regions": ["UK", "TK", "HK", "IN" ],
         "baseDate": "2022-11-01T00:00:00.000Z",
-        "clusterTier": "M10",
+        "clusterTier": "M40",
         "rebuildData": false,
         "apiCount": 1000
       }
     },
     {
-      "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_lookup",
-      "className": "APIMonitorLookupTest",
-      "measures": ["USEPIPELINE"],
-      "threads": 1,
-      "iterations": 1,
-      "resultsuri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+      "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_regionquery",
+      "className": "APIMonitorRegionQueryTest",
+      "measures": ["QUERYSYNC","QUERYASYNC"],
+      "threads": 2,
+      "iterations": 500,
+      "resultsuri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
       "resultsCollectionName": "apimonitor_results",
-      "resultsDBName": "performancebenchresultstemp",
+      "resultsDBName": "performancebenchresults",
       "custom": {
-        "uri": "mongodb+srv://testuser:testpass@gcrm0.bqwfvpn.mongodb.net/?retryWrites=true&w=majority",
+        "uri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
         "apiCollectionName": "APIDetails",
         "metricsCollectionName": "APIMetrics",
+        "precomputeCollectionName": "APIPreCalc",
         "dbname": "APIMonitor",
         "regions": ["UK", "TK", "HK", "IN" ],
         "baseDate": "2022-11-01T00:00:00.000Z",
-        "clusterTier": "M10",
+        "clusterTier": "M40",
+        "rebuildData": false,
+        "apiCount": 1000
+      }
+    },
+    {
+      "namespace": "com.mongodb.devrel.pods.performancebench.models.apimonitor_precompute",
+      "className": "APIMonitorPrecomputeTest",
+      "measures": ["PRECOMPUTE"],
+      "threads": 2,
+      "iterations": 500,
+      "resultsuri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
+      "resultsCollectionName": "apimonitor_results",
+      "resultsDBName": "performancebenchresults",
+      "custom": {
+        "uri": "mongodb+srv://myuser:mypass@my_atlas_instance.mongodb.net/?retryWrites=true&w=majority",
+        "apiCollectionName": "APIDetails",
+        "metricsCollectionName": "APIMetrics",
+        "precomputeCollectionName": "APIPreCalc",
+        "dbname": "APIMonitor",
+        "regions": ["UK", "TK", "HK", "IN" ],
+        "baseDate": "2022-11-01T00:00:00.000Z",
+        "clusterTier": "M40",
         "rebuildData": false,
         "apiCount": 1000
       }
